--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>,
 Singapore.</p>
  <h2>Interests</h2>
- <p>Tell us about your interests/hobbies and why you enjoy doing them.
-Include at least one hyperlink to the relevant website.</p>
+ <p>I like to sleep, play soccer, <a href="https://www.playstation.com/en-us/explore/ps4/">video games.</a></p>
  <h2>Projects</h2>
  <p>I am doing <a href="http://codein.withgoogle.com">Google Code-in
 2016</a> with <a href="http://fossasia.org">FOSSASIA</a>!</p>
