--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <h1>Welcome to Hao Yuan's home on the web!</h1>
  <img src="photo.jpg" />
  <h2>About</h2>
- <p>Hi! I am Lim Ah Seng, a 14-year old student from <a
+ <p>Hi! I am Loh Hao Yuan, a 17-year old student from <a
 href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>,
 Singapore.</p>
  <h2>Interests</h2>
